--- a/index.html
+++ b/index.html
@@ -4,11 +4,83 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homework_W5</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/35152d474c.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <h1>Hello</h1>
-    <script src="script.js"></script>
+    <div class="container">
+      <div class="fullpage">
+        <div class="board">
+          <h1>
+            <span id="dia"> Sun 20 Aug </span>
+            <br />
+            <span id="horas"> 10h33 </span>
+          </h1>
+        </div>
+        <div class="row">
+          <div class="col-7">
+            <span class="degrees" id="degrees">-81</span>
+            <span id="change-cel"> <a href="#">ºC</a></span> |
+            <span id="change-far"> <a href="#">ºF</a> </span>
+            <br />
+            <span id="cidade">Mars</span>
+          </div>
+          <div class="col-5">
+            Humidity: <span id="humidity">0</span>%
+            <br />
+            Wind: <span id="wind">16</span>km/h
+          </div>
+        </div>
+        <form class="input-group" id="search-form">
+          <input
+            type="search"
+            id="city-input"
+            class="form-control"
+            placeholder="Search city"
+          />
+          <input type="submit" value="🔍" id="button-search" class="button" />
+        </form>
+        <button class="location" id="geo">📍</button>
+        <div class="row nextweek mx-0">
+          <div class="col day">
+            <strong>Mon</strong> <br />
+            <i class="fa-solid fa-sun"></i> <br />
+            31º
+          </div>
+          <div class="col day">
+            <strong>Tue</strong><br />
+            <i class="fa-solid fa-sun"></i> <br />
+            28º
+          </div>
+          <div class="col day">
+            <strong>Wed</strong><br />
+            <i class="fa-solid fa-sun"></i> <br />
+            27º
+          </div>
+          <div class="col day">
+            <strong>Thu</strong> <br /><i class="fa-solid fa-cloud-sun"></i>
+            <br />
+            25º
+          </div>
+          <div class="col day">
+            <strong>Fri</strong> <br />
+            <i class="fa-solid fa-cloud-rain"></i> <br />
+            24º
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
