Added link to github

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             24º
           </div>
         </div>
+        <div class="github">
+          <a href="https://github.com/margaridarita/pigeon_weather_app"
+            >Open-source code</a
+          >
+          by Marga
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
