--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework_W5</title>
-    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -29,17 +29,22 @@
           </h1>
         </div>
         <div class="row">
-          <div class="col-7">
+          <div class="col-6 mainDetails">
             <span class="degrees" id="degrees"></span>
             <a href="#" id="change-cel" class="active">ºC</a> |
             <a href="#" id="change-far">ºF</a>
             <br />
             <span id="cidade"></span>
           </div>
-          <div class="col-5">
-            Humidity: <span id="humidity"></span>%
-            <br />
-            Wind: <span id="wind"></span>km/h
+          <div class="col-6 details">
+            <ul style="list-style-type: none" m-0>
+              <li>
+                <img src="" alt="clear" class="icon" id="icon" />
+                <span id="description"></span>
+              </li>
+              <li>Humidity: <span id="humidity"></span>%</li>
+              <li>Wind: <span id="wind"></span>km/h</li>
+            </ul>
           </div>
         </div>
         <form class="input-group" id="search-form">
