Capitalized description's 1st letter

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul style="list-style-type: none" m-0>
               <li>
                 <img src="" alt="clear" class="icon" id="icon" />
-                <span id="description"></span>
+                <p id="description" class="capitalize"></p>
               </li>
               <li>Humidity: <span id="humidity"></span>%</li>
               <li>Wind: <span id="wind"></span>km/h</li>
