--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
           </div>
         </div>
         <div class="github">
-          <a href="https://github.com/margaridarita/pigeon_weather_app"
+          <a
+            href="https://github.com/margaridarita/pigeon_weather_app"
+            target="_blank"
             >Open-source code</a
           >
           by Marga
