--- a/index.html
+++ b/index.html
@@ -58,31 +58,20 @@
           <input type="submit" value="🔍" id="button-search" class="button" />
         </form>
         <button class="location" id="geo">📍</button>
-        <div class="row nextweek mx-0">
-          <div class="col day">
-            <strong>Mon</strong> <br />
-            <i class="fa-solid fa-sun"></i> <br />
-            31º
-          </div>
-          <div class="col day">
-            <strong>Tue</strong><br />
-            <i class="fa-solid fa-sun"></i> <br />
-            28º
-          </div>
-          <div class="col day">
-            <strong>Wed</strong><br />
-            <i class="fa-solid fa-sun"></i> <br />
-            27º
-          </div>
-          <div class="col day">
-            <strong>Thu</strong> <br /><i class="fa-solid fa-cloud-sun"></i>
-            <br />
-            25º
-          </div>
-          <div class="col day">
-            <strong>Fri</strong> <br />
-            <i class="fa-solid fa-cloud-rain"></i> <br />
-            24º
+        <div class="forecast" id="forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="forecast-date">Thu</div>
+              <img
+                src="http://openweathermap.org/img/wn/50d@2x.png"
+                alt=""
+                width="44"
+              />
+              <div class="forecast-temperatures">
+                <span class="forecast-temperature-max"> 18° </span>
+                <span class="forecast-temperature-min"> 12° </span>
+              </div>
+            </div>
           </div>
         </div>
         <div class="github">
