--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
         </div>
         <div class="row">
           <div class="col-6 mainDetails">
-            <span class="degrees" id="degrees"></span>
-            <a href="#" id="change-cel" class="active">ºC</a> |
-            <a href="#" id="change-far">ºF</a>
-            <br />
-            <span id="cidade"></span>
+            <div class="degrees"><span id="degrees"></span>ºC</div>
+            <div id="cidade"></div>
           </div>
           <div class="col-6 details">
             <ul style="list-style-type: none" m-0>
@@ -61,15 +58,15 @@
         <div class="forecast" id="forecast">
           <div class="row">
             <div class="col-2">
-              <div class="forecast-date">Thu</div>
+              <div class="forecast-date"></div>
               <img
                 src="http://openweathermap.org/img/wn/50d@2x.png"
                 alt=""
                 width="44"
               />
               <div class="forecast-temperatures">
-                <span class="forecast-temperature-max"> 18° </span>
-                <span class="forecast-temperature-min"> 12° </span>
+                <span class="forecast-temperature-max"></span>
+                <span class="forecast-temperature-min"></span>
               </div>
             </div>
           </div>
